--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Oxygen', sans-serif !important;
-
+  background-color: #000 !important;
 }
 
 code {
@@ -23,6 +23,44 @@ code {
   color: azure !important
 }
 
+
+
+
+
 h1{
   font-size: 20px !important;
+  
+}
+
+.flex-container{
+  display: flex !important;
+  border-color: white !important;
+}
+
+.btn {
+  background-color: black !important;
+  color: white !important;
+  border-color: orange !important;
+}
+
+select{
+  box-shadow: none !important;
+  border-color: white !important;
+}
+
+.info {
+  color: white !important;
+  border-color: white !important;
+
+}
+
+
+.theme-toggle i {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+[data-theme='dark'] {
+  --background: #000;
+  --text-primary: #fff;
 }
